--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,48 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-djangorestframework = "*"
-cohere = "*"
-drf-spectacular = "*"
-django-cors-headers = "*"
-gunicorn = "*"
+django = "==5.1.6"
+djangorestframework = "==3.15.2"
+cohere = "==5.13.12"
+drf-spectacular = "==0.28.0"
+django-cors-headers = "==4.7.0"
+gunicorn = "==23.0.0"
+json-repair = "*"
+annotated-types = "==0.7.0"
+anyio = "==4.8.0"
+asgiref = "==3.8.1"
+attrs = "==25.1.0"
+certifi = "==2025.1.31"
+charset-normalizer = "==3.4.1"
+colorama = "==0.4.6"
+fastavro = "==1.10.0"
+filelock = "==3.17.0"
+fsspec = "==2025.2.0"
+h11 = "==0.14.0"
+httpcore = "==1.0.7"
+httpx = "==0.28.1"
+httpx-sse = "==0.4.0"
+huggingface-hub = "==0.29.0"
+idna = "==3.10"
+inflection = "==0.5.1"
+jsonschema = "==4.23.0"
+jsonschema-specifications = "==2024.10.1"
+packaging = "==24.2"
+pydantic = "==2.10.6"
+pydantic-core = "==2.27.2"
+pyyaml = "==6.0.2"
+referencing = "==0.36.2"
+requests = "==2.32.3"
+rpds-py = "==0.22.3"
+sniffio = "==1.3.1"
+sqlparse = "==0.5.3"
+tokenizers = "==0.21.0"
+tqdm = "==4.67.1"
+types-requests = "==2.32.0.20241016"
+typing-extensions = "==4.12.2"
+tzdata = "==2025.1"
+uritemplate = "==4.1.1"
+urllib3 = "==2.3.0"
 
 [dev-packages]
 
